# behavior-agent-system-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/scenarios/: demo_replay.bas
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DIS_BINARY.md  REPLAY_FORMAT.md  ROADMAP.md  TASK_BREAKDOWN.md  TESTING.md
include/bas/cache/: decision_cache.hpp
include/bas/common/: types.hpp
include/bas/decision/: fire_control_engine.hpp  maneuver_engine.hpp
include/bas/dis/: dis_adapter.hpp  dis_binary_parser.hpp
include/bas/inference/: model_runtime.hpp
include/bas/memory/: event_memory.hpp
include/bas/situation/: situation_fusion.hpp
include/bas/system/: agent_pipeline.hpp  replay_metrics.hpp  scenario_replay.hpp
scripts/: generate_demo_dis_binary.py  qwen_openai_server.py  run_qwen_demo.sh
src/: agent_pipeline.cpp  decision_cache.cpp  dis_adapter.cpp  dis_binary_parser.cpp  dis_parse_main.cpp  event_memory.cpp  fire_control_engine.cpp  main.cpp  maneuver_engine.cpp  model_runtime.cpp  replay_main.cpp  replay_metrics.cpp  scenario_replay.cpp  situation_fusion.cpp
tests/: test_dis_binary_parser.cpp  test_fire_control.cpp  test_latency_smoke.cpp  test_maneuver.cpp  test_memory.cpp  test_pipeline.cpp  test_replay_loader.cpp  test_replay_metrics.cpp  test_replay_pipeline.cpp
